feat: tut 3 files

--- a/TUT03/q2.md
+++ b/TUT03/q2.md
@@ -49,7 +49,7 @@ a is stored at 0x10000020 to 0x10000020 + 4 (excluding 0x10000024) \
 type == int
 
 
-b:  .space  4 \
+b:  .space  4 # <label>: .space <number of bytes> \ 
 sizeof == 4 bytes \
 addr == 0x10000020 + 4 == 0x10000024 \
 b is stored at 0x10000024 to 0x10000024 + 4 (excluding 0x10000024) \
@@ -62,27 +62,30 @@ type == ???
 The .ALIGN directive is a way to override the default alignment rules. The next field after the directive will be aligned to a multiple of 2 to the power of n where n is the .ALIGN value. I.e., .align 2 aligns it by pow(2, 2) = 4 bytes.
 
 
-c:  .asciiz "abcde" 6 \
-    .align  2
+c:  .asciiz "abcde" # .ascii(z) with z means we are adding on a null terminator '\0'  6 bytes \
+    .align  2 # only need another 2 bytes to pad to an address divisible by 4
     # pads memory to nearest address divisible by 2^2 == 4 \
 sizeof == 8 \
-addr == 0x10000024 + 8 == 0x10000028 \
+addr == 0x10000028 \
+c starts from 0x10000028 to 0x10000028 + 8
 type = char[] 
 
 
 d:  .byte   1, 2, 3, 4 \
-sizeof == 
-addr == 
-type == 
+sizeof == 1 * 4 = 4 bytes
+addr == 0x10000028 + 8
+type == char
 
 
 e:  .word   1, 2, 3, 4 \
-sizeof == 
+sizeof == 4 bytes * 4 = 16 bytes
 addr == 
-type == 
+type == int
 
 
 f:  .space  1 \
+sizeof == 1 byte
+type == ???
 
 
 ## Answer
