--- a/TUT03/q4.md
+++ b/TUT03/q4.md
@@ -89,7 +89,7 @@ Address       Data Definition
 0x10010014         .word 7
 ```
 
-a. la   $t0, aa
+a. la   $t0, aa # la = load address
 $t0 = address aa
 $t0 = 0x10010000
 
@@ -129,7 +129,7 @@ $t0 =
 h. la   $t1, cc
 lw   $t0, 2($t1)
 $t1 = 0x10010008
-2($t1) = 2 + 0x10010008 = 0x1001000A
+2($t1) = 2 + 0x10010008 = 0x1001000A // A = 10 in hexadecimal
 
 
 NOTE: because this is a lw instruction, the address must be 4-byte aligned. Thus, executing this instruction will result in a memory alignment error.
