--- a/TUT03/q7.md
+++ b/TUT03/q7.md
@@ -5,6 +5,12 @@ Arrays are a contiguous block of memory. You're usually given a label that refer
 address of array[i] = address of array + offset 
 = address of array + i * sizeof(each array element)
 
+int arr[5] = [0, 1, 2, 3, 4]
+&arr[0] = start of array
+&arr[1] = start of array + space for arr[0] = start of array + 4
+&arr[2] = start of array + space for arr[0] + space for arr[1] = start of array + 2 * 4
+
+
 1) Find the number of bytes we need to offset inside the array.
 Don't forget to consider the size of each array element.
 
