feat: tut 5 files

--- a/TUT05/q2.md
+++ b/TUT05/q2.md
@@ -1,5 +1,5 @@
 Convert Decimal to Binary
-- continuously subtract by the largest power of 2 possible, then do that to the reminder continuously
+- continuously subtract by the largest power of 2 possible, then do that to the reminder continuously until 0
 
 15 
 - 8
@@ -23,8 +23,11 @@ Represent these decimal numbers in binary, octal and hexadecimal:
 
 a. 1
     Binary: 1 * 2^0 = 0b001
-    Octal: 1 = 0b001 = 0o1 // group 3 binary digits and convert each group of 3 to octal
-    Hexadecimal: 1 = 0b0001 = 0x1 // group 4 binary digits and convert each group of 4 to hexadecimal
+    Octal (base 8 = 2^3): 1 = 0b001 = 0o1 // group 3 binary digits from the right and convert each group of 3 to octal
+    // 0bxxx - represents numbers 0 to 7
+    // min 0b000 - 0
+    // max 0b111 - 1 * 2^0 + 1 * 2^1 + 1 * 2^2 = 1 + 2 + 4 = 7
+    Hexadecimal (base 16 = 2^4): 1 = 0b0001 = 0x1 // group 4 binary digits and convert each group of 4 to hexadecimal
 
 b. 8
     Binary: 8 = 1 * 2^3 = 0b 1000  
@@ -46,3 +49,8 @@ h. 200
     Octal: 0b 011 001 000 = 0o310
     Hexadecimal: 0b 1100 1000 = 0xC8
 
+Python3:
+- int(\<number or string>, \<base>): converts to decimal (i.e. int('0b110') = int(0b110) = 6)
+- bin(\<number>): converts number to binary
+- oct(\<number>): converts number to octal (i.e. oct(0b110) = 0o6)
+- hex(\<number>): converts number to hexadecimal
