--- a/TUT05/q3.md
+++ b/TUT05/q3.md
@@ -15,6 +15,8 @@ a | b (bitwise OR)
 
 bitwise OR
 
+Logical OR = ||, different from bitwise single |
+
 0 | 0 = 0
 0 | 1 = 1
 1 | 0 = 1
@@ -26,6 +28,8 @@ bitwise OR
 0b 1111 1111 1111 1111
 
 a & b (bitwise AND)
+
+Logical AND = &&
 
 0 & 0 = 0
 0 & 1 = 0
@@ -66,6 +70,7 @@ a & ~b (bitwise AND)
 
 c << 6 (left shift)
 
+c = 0b 0000 0000 0000 0001
 0b 0000 0000 0100 0000
 = 0x 0 0 4 0
 
@@ -75,8 +80,8 @@ a >> 4 (right shift)
 
 right shit (>> n) - deleting the right n bits, we fill the left with n 0s
 
+a = 0b 0101 0101 0101 0101
 0b 0000 0101 0101 0101
-
 
 a & (b << 1)
 
