feat: tut 7 files

--- a/TUT07/q5.md
+++ b/TUT07/q5.md
@@ -21,7 +21,7 @@ So we can write 2.5 as (10.1)<sub>2</sub>.
 
 - sign is 0 if positive/zero or 1 if negative
 - exponent is e + 127 in bits 
-- mantisa/fraction would be the xxxx bits (filling it with 0s at the right to make 23 bits)
+- mantisa/fraction would be the decimal part xxxx bits but filling it with 0s at the right to make 23 bits
 
 So for 2.5
 - sign = 0b0
@@ -53,8 +53,8 @@ So we can write 0.375 => (0.011)<sup>2</sup>.
 
 4. Convert it to bits
 
-sign = 0 (positive)
-exponent = -2 + 127 = 125 = 0b01111101
+sign = 0 (positive) \ 
+exponent = -2 + 127 = 125 = 0b01111101 \
 fraction = 0b100000...
 
 Binary representation for 0.375 = 0b 0 01111101 1000000000...
